@@ -74,7 +74,7 @@ pml.control <- function(epsilon = 1e-08, maxit = 10,
 #' @rdname pml.control
 #' @export
 ratchet.control <- function(iter = 20L, maxit = 200L, minit = 100L, prop = 1/2,
-                            rell = TRUE, bs=1000L){
+                            rell = TRUE, bs=100L){
   if (!is.numeric(maxit) || maxit <= 0)
     stop("maximum number of iterations must be > 0")
   if (!is.numeric(minit) || minit <= 0)
