@@ -80,7 +80,7 @@ print.pml <- function(x, ...) {
     if(x$site.rate=="gamma") cat("Discrete gamma model\n")
     if(x$site.rate=="free_rate") cat("Free rate model\n")
     if(x$site.rate=="gamma_quadrature") cat("Discrete gamma model (quadrature) \n")
-    if(x$site.rate=="gamma_unbiased") cat("Discrete gamma model (phangorn) \n")
+    if(x$site.rate=="gamma_phangorn") cat("Discrete gamma model (phangorn) \n")
     cat("Number of rate categories:", x$k, "\n")
     if(x$site.rate!="free_rate") cat("Shape parameter:", x$shape, "\n")
     rate <- x$g
